using UnityEngine;


public class AnimationStrings : MonoBehaviour
{
    internal static string isMoving = "IsMoving";
    internal static string isRunning = "IsRunning";
    internal static string IsGrounded = "isGrounded";
    internal static string yVelocity = "yVelocity";
    internal static string jumpTrigger = "jump"; // You used it in SetTrigger
    internal static string IsOnWall = "isonWall";
    internal static string IsOnCeiling = "isonCeiling";
    internal static string attackTrigger = "Attack";
    internal static string canMove = "canMove";
    internal static string hasTarget = "hasTarget";
    internal static string isAlive = "isAlive";
   // internal static string IsHit = "isHit";

    internal static string hitTrigger = "hit";
    internal static string lockVelocity = "lockVelocity";
    internal static string attackCooldown = "attackCooldown";

}
